# Sepsis_drug_discovery

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: sepsis_config.yaml
data/: gene_signature.csv
docs/: METHODOLOGY.md  REPRODUCIBILITY.md
manuscripts/: Authorship_form_IJCCM_ijccm.docx  COI_ICMJE_form_ijccm.docx  CoverLetter_IJCCM.docx  CoverLetter_IJCCM.md  Financial_Disclosure_IJCCM.docx  Manuscript_Sepsis_HDT.docx  Manuscript_Sepsis_HDT_FINAL.docx  Manuscript_Sepsis_HDT_VERIFIED.docx  OA_Form_ijccm.docx  Supplementary_Materials.docx  Supplementary_Materials_FINAL.docx  Supplementary_Table_S3_Literature_Validation.md
outputs/tables/: compounds_ranked.csv  targets_ranked.csv
scripts/: generate_cover_letter.py  generate_figures.py  generate_manuscript.py  generate_manuscript_final.py  generate_manuscript_verified.py  generate_supplementary.py  generate_supplementary_final.py  run_pipeline.py
tests/: test_pipeline.py
